--- a/src/component/Design/Design.css
+++ b/src/component/Design/Design.css
@@ -59,7 +59,7 @@
     flex-shrink: 0;
 }
 .right-side{
-    margin-left: -16px;
+    margin-left: -14px;
     height: 400px;
     z-index: 2;
 }
